Sauvegarde de Vincent 12h15

--- a/yepcette/home.html
+++ b/yepcette/home.html
@@ -67,10 +67,11 @@
             </ul>
         </nav>
         <ul>
+            <li><a href=""><span class="fa-brands fa-pinterest-p"></span></a></li>
             <li><a href=""><span class="fa-brands fa-facebook-f" alt="facebook"></span></a></li>
-            <li><a href=""><span class="fa-brands fa-twitter"></span></a></li>
             <li><a href=""><span class="fa-brands fa-instagram"></span></a></li>
-            <li><a href=""><span class="fa-solid fa-basketball"></span></a></li>
+            <li><a href=""><span class="fa-brands fa-twitter"></span></a></li>
+            <li><a href=""><span class="fa-brands fa-youtube"></span></a></li>
         </ul>
     </header>
     
