Sauvegarde de Vincent 12h58

--- a/yepcette/home.html
+++ b/yepcette/home.html
@@ -84,6 +84,63 @@
     <main id="home">
         <section>
             <h1>Yepcette</h1>
+            <p>Le site qui vous fera manger vos chaussettes</p>
+        </section>
+        <section>
+            <h2>Nos recettes les plus chouettes</h2>
+            <ul>
+                <li>
+                    <article class="article">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://picsum.photos/seed/picsum/500/300"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Titre de mon article</h3>
+                            <p>Résumé de l'article qui explique en quoi consiste l'article et peut être même que ça peut être le début de l'article qui est coupé si celui ci est trop long car il y aurait trop de mots.</p>
+                        </section>
+                        <footer>
+                            <a class="btn-orange" href="">Lire l'article</a>
+                        </footer>
+                    </article>
+                </li>
+                <li>
+                    <article class="article">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://picsum.photos/seed/picsum/500/300"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Titre de mon article</h3>
+                            <p>Résumé de l'article qui explique en quoi consiste l'article et peut être même que ça peut être le début de l'article qui est coupé si celui ci est trop long car il y aurait trop de mots.</p>
+                        </section>
+                        <footer>
+                            <a class="btn-orange" href="">Lire l'article</a>
+                        </footer>
+                    </article>
+                </li>
+                <li>
+                    <article class="article">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://picsum.photos/seed/picsum/500/300"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Titre de mon article</h3>
+                            <p>Résumé de l'article qui explique en quoi consiste l'article et peut être même que ça peut être le début de l'article qui est coupé si celui ci est trop long car il y aurait trop de mots.</p>
+                        </section>
+                        <footer>
+                            <a class="btn-orange" href="">Lire l'article</a>
+                        </footer>
+                    </article>
+                </li>
+            </ul>
         </section>
     </main>
     
