Sauvegarde de Vincent 16h56

--- a/yepcette/home.html
+++ b/yepcette/home.html
@@ -93,6 +93,53 @@
             </section>
         </section>
         <section>
+            <h2>Les plus grands chefs de la toile</h2>
+            <ul>
+                <li>
+                    <article class="article2">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGfPNZ0gTgpJg/profile-displayphoto-shrink_800_800/0/1649677917238?e=2147483647&v=beta&t=89Acb9s8auvBt_8TBgwNf4MHWW2_9XrS_8kCH9f_TE4"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Juju</h3>
+                            <p>Bac +4 cuisinier option sauces épicées</p>
+                        </section>
+                    </article>
+                </li>
+                <li>
+                    <article class="article2">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://res.cloudinary.com/ouiboss-com/image/upload/f_jpg,q_80,w_200,h_200,c_fill,g_face/v1/mcmdzcoydbdvzrchvdwp"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Mari</h3>
+                            <p>Master en cuisine indiennes</p>
+                        </section>
+                    </article>
+                </li>
+                <li>
+                    <article class="article2">
+                        <h2 class="hidden">Article</h2>
+                        <header>
+                            <figure>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTI-Ua2Bf89ZEebI9dyB6fG1g8shhgE4QM1wV-DhfvmnA&s"/>
+                            </figure>
+                        </header>
+                        <section>
+                            <h3>Vincent</h3>
+                            <p>Chercheur en mélange des saveurs asiatique</p>
+                        </section>
+                    </article>
+                </li>
+            </ul>
+        </section>
+        <section>
             <h2>Nos recettes les plus chouettes</h2>
             <ul>
                 <li>
