--- a/yepcette/home.html
+++ b/yepcette/home.html
@@ -114,11 +114,11 @@
                         <h2 class="hidden">Article</h2>
                         <header>
                             <figure>
-                                <img src="https://res.cloudinary.com/ouiboss-com/image/upload/f_jpg,q_80,w_200,h_200,c_fill,g_face/v1/mcmdzcoydbdvzrchvdwp"/>
+                                <img src="https://cdn.discordapp.com/attachments/1044891519691268176/1053243506661003304/killyan.jpg"/>
                             </figure>
                         </header>
                         <section>
-                            <h3>Mari</h3>
+                            <h3>Killyan</h3>
                             <p>Master en cuisine indiennes</p>
                         </section>
                     </article>
@@ -151,11 +151,11 @@
                             </figure>
                         </header>
                         <section>
-                            <h3>La raclette qui pète</h3>
-                            <p>C'est l'hivers... il fait froid... le temps idéal pour sortir le roblochon qui coule dans le frigo depuis 3 semaines...</p>
+                            <h3>Joue de boeuf et sa purée de potimarron</h3>
+                            <p>Une envie de se faire plaisir en amoureux au coin du feu...</p>
                         </section>
                         <footer>
-                            <a class="btn-blue" href="">Lire la recette</a>
+                            <a class="btn-blue" href="recette.html">Lire la recette</a>
                         </footer>
                     </article>
                 </li>
