--- a/yepcette/liste-recettes.html
+++ b/yepcette/liste-recettes.html
@@ -66,8 +66,8 @@
         <nav>
             <h2 class="hidden">Menu de navigation</h2>
             <ul>
-                <li><a href="https://julienpostec.sites.3wa.io/INTE/Blog-de-recettes-de-cuisine/yepcette/home.html?_c9_id=livepreview0&_c9_host=https://julienpostec.ide.3wa.io">Accueil</a></li>
-                <li><a href="">Les Recettes</a></li>
+                <li><a href="home.html">Accueil</a></li>
+                <li><a href="liste-recettes.html">Les Recettes</a></li>
                 <li><a href="">Nos Chefs</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
