--- a/yepcette/home.html
+++ b/yepcette/home.html
@@ -63,7 +63,11 @@
 
     <header>
         <h1>Yepcette</h1>
-        <nav>
+        <nav id="nav_mobil">
+            <span class="fa-solid fa-bars"></span>
+        </nav>
+
+        <nav  id="nav_pc">
             <h2 class="hidden">Menu de navigation</h2>
             <ul>
                 <li><a href="home.html">Accueil</a></li>
