--- a/yepcette/recette.html
+++ b/yepcette/recette.html
@@ -4,34 +4,34 @@
     <!--Encodage des caractères-->
     <meta charset="utf-8">
     <!--Titre affiché dans l'onglet-->
-    <title>Titre de la page</title>
+    <title>Yepcette</title>
 
     <!--Titre de la page-->
-    <meta name="title" content="Cinépotes - critique cinéma"/>
+    <meta name="title" content="Yepcette - Les recettes qui fouettes"/>
     <!--Déscription de la page-->
-    <meta name="description" content="Critique cinématographique des meilleurs films"/>
+    <meta name="description" content="Les meilleurs recette de Tante Claudette"/>
     <!--Mots clés-->
-    <meta name="keywords" content="critique,cinéma,films,actualité,meilleurs,movies,écran"/>
+    <meta name="keywords" content="recettes,cuisine,plats,manger,préparer"/>
     <!--Auteur-->
-    <meta name="author" content="Mari Doucet"/>
+    <meta name="author" content="Vincent, Killyan et Julien"/>
     <!--Quand votre page en appelle une autre, cette nouvelle page pourra savoir de qui vient la demande, origin permet de dire que vous envoyez le strict minimum, l'url de base du site d'origine.-->
     <meta name="referrer" content="origin"/>
     
     <!--Metadonnées Open Graph-->
     <!--Title-->
-    <meta property="og:title" content="Cinépotes - critique cinéma"/>
+    <meta property="og:title" content="Yepcette - Accueil"/>
     <!--Type-->
     <meta property="og:type" content="article"/>
     <!--Image-->
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0566/8526/5032/files/4_3d6903d4-c9f9-4a3b-8f6c-00e884e04bbf.png?v=1656921267" />
     <!--URL-->
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/"/>
+    <meta property="og:url" content="https://vincentollivier.sites.3wa.io/02-int%C3%A9gration/Blog-de-recettes-de-cuisine/yepcette/home.html"/>
     <!--Description-->
-    <meta property="og:description" content="Critique cinématographique des meilleurs films"/>
+    <meta property="og:description" content="Les meilleurs recettes de Tante Huguette"/>
     <!--Local-->
     <meta property="og:locale" content="fr_FR"/>
     <!--Site name-->
-    <meta property="og:site_name" content="Cinépotes"/>
+    <meta property="og:site_name" content="Yepcette"/>
     
     <!--Taille de l'écran-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
