--- a/yepcette/recette.html
+++ b/yepcette/recette.html
@@ -61,9 +61,13 @@
 
 <body id="recette">
 
-    <header class="recette">
+    <header>
         <h1>Yepcette</h1>
-        <nav>
+        <nav id="nav_mobil">
+            <span class="fa-solid fa-bars"></span>
+        </nav>
+
+        <nav  id="nav_pc">
             <h2 class="hidden">Menu de navigation</h2>
             <ul>
                 <li><a href="home.html">Accueil</a></li>
