--- a/yepcette/liste-recettes.html
+++ b/yepcette/liste-recettes.html
@@ -90,7 +90,7 @@
         <section class="m-recette-du-jour">
             <article class="m-card-recette-du-jour">
                 <figure class="figure1">
-                    <img src="/img/Images/logocuisine2.png" class="logo">
+                    <img src="https://svgsilh.com/svg_v2/2400338.svg" class="logo">
                 </figure>
                 <figure class="figure2">
                     <img src="https://cdn.discordapp.com/attachments/1044891519691268176/1053243506661003304/killyan.jpg" class="chef">
