--- a/yepcette/liste-recettes.html
+++ b/yepcette/liste-recettes.html
@@ -107,7 +107,7 @@
                     <img src="https://www.artandstick.be/getsupercustomizedimage.php5?objid=242&colorid1=2&colorid2=4&colorid3=4&colorid4=4&colorid5=4&way=NORMAL&transparent=Y" class="fourchette">
                 </figure>
                 <ul class="m-recette-du-jour-ul">
-                    <li><li><a href="https://kilyangerard.sites.3wa.io/inte/Blog-de-recettes-de-cuisine/yepcette/recette.html"><input class="bouton" type="button" value="J'y vais"></a></li></li>
+                    <li><li><a href="https://julienpostec.sites.3wa.io/INTE/Blog-de-recettes-de-cuisine/yepcette/recette.html"><input class="bouton" type="button" value="J'y vais"></a></li></li>
                 </ul>
             </article>
         </section>
